fix: Fix cards spacing

--- a/src/app/routes/Route.scss
+++ b/src/app/routes/Route.scss
@@ -42,6 +42,11 @@
     @include desktop-down {
         grid-template-columns: 1fr;
     }
+
+    .card {
+      margin-bottom: 0;
+    }
+
   }
 
   .card {
